updated gpg keys

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Las Vegas, NV, December 2003.</li>
 </div>
 <!-- MAIN CONTENT ENDS HERE -->
 <br>
-<a href="zliang-gpg-pub.asc">Here</a>
+<a href="liangzk-gpg-pub.asc">Here</a>
 is my <a href="http://www.gnupg.org">GnuPG</a>
 public key signed by <a href="http://www.cacert.org">CACert.org</a>
 <br>
