--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ lang="en" xml:lang="en">
     <table>
     <tr>
     	<td width="20%">
-    <img src="liangzk.jpg" width="200px" title="@PKU" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
+    <img src="photo0.jpg" width="100px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
+  #888; "><img src="photo1.jpg" width="100px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
   #888; ">
   		</td>
         <td width="5%">
@@ -82,12 +83,15 @@ Office: COM1 #03-16<br>
 
     </p>
      
-    <h2>Selected Publications <a href="publications.html" class="btn">Full List</a></h2>
+    <h2>Selected Publications <a href="http://dblp.uni-trier.de/pers/hd/l/Liang:Zhenkai" class="btn">Full List</a></h2>
 
 <ul>
+<li><strong>Neural Nets Can Learn Function Type Signatures From Binaries.</strong><br/>
+Zheng Leong Chua, Shiqi Shen, Prateek Saxena, and Zhenkai Liang. <br />
+In <em>USENIX Security Symposium</em>, August 2017.  
 <li><strong>Data-Oriented Programming: On the Expressiveness of Non-Control Data Attacks</strong>.<br />
   Hong Hu, Shweta Shinde, Sendroiu Adrian, Zheng Leong Chua, Prateek Saxena, and Zhenkai Liang. <br />
-  To Appear in <em>the IEEE Symposium on Security and Privacy</em>, May 2016.  </li>
+  In <em>the IEEE Symposium on Security and Privacy</em>, May 2016.  </li>
   <li><strong>Tool, Technique, and Tao in Computer Security Education</strong>.<br />
      Zhenkai Liang and Jian Mao.<br />
      In <em>IEEE Reliability Magazine</em>, August/September/October, 2015. </li>
@@ -216,7 +220,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 </p>
 
 
-Last update: 1 February 2016. 
+Last update: 1 October 2017. 
 
 </body>
 </html>
