--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@ lang="en" xml:lang="en">
 
 
     <div  class="outline">
-    <table>
+    <table width="534">
     <tr>
-    	<td width="20%">
-    <img src="photo0.jpg" width="100px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
-  #888; "><img src="photo1.jpg" width="100px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
+    	<td width="60%" height="240">
+    <img src="photo0.jpg" width="150px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
+  #888; ">  <img src="photo1.jpg" width="150px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
   #888; ">
   		</td>
-        <td width="5%">
+        <td width="6%">
         </td>
-        <td>
+        <td width="35%">
  <div>
 
 <h1>Zhenkai Liang</h1>
