--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ lang="en" xml:lang="en">
 <div id='cssmenu'>
 <ul>
    <li class='active'><a href='index.html'>Home</a></li>
-   <li><a href='publications.html'>Publications</a></li>
-   <li><a href='research.html'>Research</a></li>
-   <li><a href='teaching.html'>Teaching</a></li>
+   <li><a href='http://dblp.uni-trier.de/pers/hd/l/Liang:Zhenkai'>Publications</a></li>
+   <li><a href=''>Research</a></li>
+   <li><a href=''>Teaching</a></li>
 </ul>
 </div>
 
