--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@ lang="en" xml:lang="en">
 <div class="mid-column">
 
 
-    <div  class="outline">
-    <table width="534">
+    <div class="outline">
+    <table width="100%">
     <tr>
-    	<td width="60%" height="240">
-    <img src="photo0.jpg" width="150px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
-  #888; ">  <img src="photo1.jpg" width="150px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
+    	<td width="50%" height="240">
+    <img src="photo0.jpg" width="140px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
+  #888; ">  <img src="photo1.jpg" width="140px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
   #888; ">
   		</td>
-        <td width="6%">
+        <td width="5%">
         </td>
-        <td width="35%">
+        <td width="45%">
  <div>
 
 <h1>Zhenkai Liang</h1>
