--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ lang="en" xml:lang="en">
     <div class="outline">
     <table width="100%">
     <tr>
-    	<td width="50%" height="240">
+    	<td width="50%" height="240" align="right">
     <img src="photo0.jpg" width="140px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
   #888; ">  <img src="photo1.jpg" width="140px" title="" style="  box-shadow: 2px 2px 2px #888;-moz-box-shadow: 2px 2px 2px #888; -webkit-box-shadow: 2px 2px 2px
   #888; ">
