--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
             <td width="5%"></td>
             <td width="45%">
               <div>
-                <h1>Zhenkai Liang</h1>
+                <h2>LIANG Zhenkai</h2>
+                <h2>梁振凯</h2>
                 <p> Mailing address:<br>
                 13 Computing Drive<br>
                 Computing 1, #03-27<br>
                 Singapore, 117417<br>
                 <br>
                 Phone: (+65) 6516 1226<br>
-                Email: liangzk @ comp.nus.edu.sg
+                Email: liangzk @ comp.nus.edu.sg<br>
                 Office: COM1 #03-16<br>
               </div>   
             </td>
