--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           My interests include research in systems and system security, as well
           as education. I'm advising the Curiosity Reserach Group under the
           following philosophy: 
-          <p> <em><b>Connecting systems (理解系统), abstracting knowledge (提炼知识),
+          <p> <em><b>Understanding systems (理解系统), abstracting knowledge (提炼知识),
           and connecting facts (参悟规律)</b></em>. </p>
           We are looking for curious minds to join our exploration. If you share
           the same view of the world, please do not hesitate to reach me.
