--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           the <a href="http://www.comp.nus.edu.sg">School of Computing</a>,
           <a href="http://www.nus.edu.sg">National University of Singapore</a>.
           My interests include research in systems and system security, as well
-          as education. I'm advising the Curiosity Reserach Group under the
-          following philosophy: 
+          as education. I'm advising the Curiosity Reserach Group with the
+          following missions: 
           <p> <em><b>Understanding systems (理解系统), abstracting knowledge (提炼知识),
           and connecting facts (参悟规律)</b></em>. </p>
           We are looking for curious minds to join our exploration. If you share
