--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           We are looking for curious minds to join our exploration. If you share
           the same view of the world, please do not hesitate to reach me.
           Curiosity is required, while mentality for repairing things (such as
-          <a href="bike.jpg">bycicles</a>) is a plus. Positions are available at
+          <a href="bike.jpg">bicycles</a>) is a plus. Positions are available at
           all levels, from undergraduate researcher/interns, Ph.D. students, and
           postdoctural research fellows.
         </p>
