--- a/index.html
+++ b/index.html
@@ -62,12 +62,26 @@
           Curiosity is required, while mentality for repairing things (such as
           <a href="bike.jpg">bicycles</a>) is a plus. Positions are available at
           all levels, from undergraduate researcher/interns, Ph.D. students, and
-          postdoctural research fellows.
+          postdoc research fellows.
         </p>
         
         <h2>Selected Publications of Current Research Focus <a href="http://dblp.uni-trier.de/pers/hd/l/Liang:Zhenkai" class="btn">Full List</a></h2>
 
         <ul>
+          <li>
+            <strong>FlowMatrix: GPU-Assisted Information-Flow Analysis through
+            Matrix-Based Representation. </strong>.<br /> Kaihang Ji, Jun Zeng,
+            Yuancheng Jiang, Zhenkai Liang, Zheng Leong Chua, Prateek Saxena,
+            and Abhik Roychoudhury.<br /> In <em>the 31st USENIX Security
+            Symposium </em>, August 2022.  
+          </li>
+          <li>
+            <strong>ShadeWatcher: Recommendation-guided Cyber Threat Analysis
+            using System Audit Records.</strong>.<br /> Jun Zeng, Xiang Wang,
+            Jiahao Liu, Yinfang Chen, Zhenkai Liang, Tat-Seng Chua, and Zheng
+            Leong Chua.<br /> In <em>the IEEE Symposium on Security and
+            Privacy</em>, May 2022.  
+          </li>
           <li>
             <strong>WATSON: Abstracting Behaviors from Audit Logs via
             Aggregation of Contextual Semantics. </strong><br/> 
@@ -257,6 +271,6 @@
     border="0"></a><img src="cname.jpg"  align="bottom" border="0"> <img
     src="curiosity.png" height="50" align="bottom" border="0">
     </p>
-    Last update: 7 February 2021
+    Last update: 11 June 2022
   </body>
 </html>
