--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <div class="author__content">
     <h3 class="author__name">LIANG Zhenkai 梁振凯</h3>
     
-    <p class="author__bio">Educator and Researcher<br> Interesting in Being, Meaningful in Doing.</p>
+    <p class="author__bio">Educator and Researcher<br><em>Interesting in Being, Meaningful in Doing.</em></p>
   </div>
 
   <div class="author__urls-wrapper">
