--- a/research/index.html
+++ b/research/index.html
@@ -256,9 +256,7 @@
     
       <h1 class="page__title">Research</h1>
     
-    <p>Bio and Research Overview.</p>
-
-<p>To be updated.</p>
+    <p>My core research interest includes computer systems and system security, including program analysis, system provenance analysis, cyber security experimentation and analysis, trusted execution environments, security of AI and other emerging systems. I have also started new research explorations in security-related topics beyond computer systems: economics/finance/policy aspects of cyber security, such as prevention of online scam, financial modeling of cyber crime, and cyber insurance.</p>
 
 
   </div>
