--- a/publications/index.html
+++ b/publications/index.html
@@ -176,7 +176,7 @@
   <div class="author__content">
     <h3 class="author__name">LIANG Zhenkai 梁振凯</h3>
     
-    <p class="author__bio">Educator and Researcher<br> Interesting in Being, Meaningful in Doing.</p>
+    <p class="author__bio">Educator and Researcher<br><em>Interesting in Being, Meaningful in Doing.</em></p>
   </div>
 
   <div class="author__urls-wrapper">
@@ -644,15 +644,9 @@
             </div>
         </li>
             <li><div class="publication">
-                <p class="paper-title">Learning Graph-based Code Representations for Source-level Functional Similarity Detection.</p>
-                <p class="authors">Jiahao Liu, Jun Zeng, Xiang Wang, and Zhenkai Liang.</p>
-                <p class="publisher">In International Conference on Software Engineering (ICSE), 2024.</p>
-            </div>
-        </li>
-            <li><div class="publication">
                 <p class="paper-title">Detecting Logic Bugs in Graph Database Management Systems via Injective and Surjective Graph Query Transformation.</p>
                 <p class="authors">Yuancheng Jiang, Jiahao Liu, Jinsheng Ba, Roland Yap, Zhenkai Liang, and Manuel Rigger.</p>
-                <p class="publisher">In International Conference on Software Engineering (ICSE), 2024.</p>
+                <p class="publisher">In International Conference on Software Engineering (ICSE), May 2024.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -665,6 +659,12 @@
                 <p class="paper-title">Securing Web Inputs Using Parallel Session Attachments.</p>
                 <p class="authors">Ziqi Yang, Ruite Xu, Qixiao Lin, Shikun Wu, Jian Mao, and Zhenkai Liang.</p>
                 <p class="publisher">In International Conference on Security and Privacy in Communication Networks (SecureComm), 2023.</p>
+            </div>
+        </li>
+            <li><div class="publication">
+                <p class="paper-title">Learning Graph-based Code Representations for Source-level Functional Similarity Detection.</p>
+                <p class="authors">Jiahao Liu, Jun Zeng, Xiang Wang, and Zhenkai Liang.</p>
+                <p class="publisher">In International Conference on Software Engineering (ICSE), April 2023.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -1316,7 +1316,7 @@
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-10-29
+  Site last updated 2025-10-30
 </div>
 
       </footer>
