--- a/research/index.html
+++ b/research/index.html
@@ -256,8 +256,62 @@
     
       <h1 class="page__title">Research</h1>
     
-    <p>My core research interest includes computer systems and system security, including program analysis, system provenance analysis, cyber security experimentation and analysis, trusted execution environments, security of AI and other emerging systems. I have also started new research explorations in security-related topics beyond computer systems: economics/finance/policy aspects of cyber security, such as prevention of online scam, financial modeling of cyber crime, and cyber insurance.</p>
+    <p>My core research interest includes computer systems and system security, including program analysis, system provenance analysis, cyber security experimentation and analysis, trusted execution environments, security of AI and other emerging systems.</p>
 
+<p>I have also started new research explorations in security-related topics beyond computer systems: economics/finance/policy aspects of cyber security, such as prevention of online scam, financial modeling of cyber crime, and cyber insurance.</p>
+
+<h2 id="research-directions">Research Directions</h2>
+<p>Project pages to be included from my group website.</p>
+
+<h4 id="system-security-and-cyber-experimentation-analysis">System security and cyber experimentation analysis</h4>
+<ul>
+  <li>Kernel mechanisms for confidential computing</li>
+  <li>System provence mechanisms and analysis techniques</li>
+  <li>Cyber experimentation as code</li>
+</ul>
+
+<h4 id="software-security-and-malicious-application-analysis">Software security and malicious application analysis</h4>
+<ul>
+  <li>Vulnerability discovery and analysis</li>
+  <li>Binary analysis and protection</li>
+  <li>Mobile malware analysis</li>
+</ul>
+
+<h4 id="ai-security-from-system-principles">AI Security from system principles</h4>
+<ul>
+  <li>Application of AI and recommendation system in software and system security</li>
+  <li>LLM security analysis using software security techniques</li>
+  <li>Agent system analysis and security</li>
+</ul>
+
+<h4 id="security-beyond-systems">Security beyond systems</h4>
+<ul>
+  <li>Online scam prevention</li>
+  <li>Financial modeling of cyber crime</li>
+  <li>Cyber risk modeling and cyber insurance</li>
+</ul>
+
+<h2 id="research-awards">Research Awards</h2>
+
+<ol>
+  <li>Distinguished Paper Award, the 34th USENIX Security Symposium, 2025.</li>
+  <li>Distinguished Paper Award, the 2nd International Sports Analytics Confer-
+ence and Exhibition (ISACE), 2025.</li>
+  <li>Best Practical Paper Award, the 27th International Symposium on Research in
+Attacks, Intrusions and Defenses (RAID), 2024.</li>
+  <li>Distinguished Paper Award Honorable Mentions, the 21st Network and Dis-
+tributed System Security Symposium (NDSS), 2019.</li>
+  <li>Best Paper Award, the 14th International Conference on Wireless Algorithms,
+Systems, and Applications (WASA), 2019.</li>
+  <li>Best Paper Award, the 19th International Conference on Engineering of Com-
+plex Computer Systems (ICECCS), 2014.</li>
+  <li>Best Paper Award, Web 2.0 Security &amp; Privacy Workshop (W2SP), 2014.</li>
+  <li>ACM SIGSOFT Distinguished Paper Award, the ESEC and ACM SIGSOFT
+Symposium on the Foundations of Software Engineering (ESEC-FSE), 2009.</li>
+  <li>Best Paper Award, the 16th USENIX Security Symposium, 2007.</li>
+  <li>Outstanding Paper Award, the 19th Annual Computer Security Applications
+Conference (ACSAC), 2003.</li>
+</ol>
 
   </div>
 </div>
@@ -291,7 +345,7 @@
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-10-29
+  Site last updated 2025-10-31
 </div>
 
       </footer>
