--- a/hobby/index.html
+++ b/hobby/index.html
@@ -257,26 +257,27 @@
       <h1 class="page__title">Hobby</h1>
     
     <h2 id="sports-music-and-research">Sports, Music, and Research</h2>
-<p>I like riding and repairing bicycles. Recently I am trying tennis and trumpet.</p>
+<p>I like riding and repairing bicycles. Recently I am trying tennis and trumpet, but I end up writing a <a href="https://tennis-ans.github.io">paper</a> about tennis. :)</p>
 
 <p>Through the long conditioning of a Ph.D. (“Permanent Head Damage”) training and my subsequent career, 
 I can’t help but notice how research shares deep parallels with arts, crafts, and sports. 
-In each domain, our attention is often pulled toward the most obvious target—the paper in research, 
-the ball in tennis, the sound in trumpet playing. Yet the direct output is rarely the true source of excellence. 
+In each domain, our attention is often pulled toward the most obvious target: the paper in research, 
+the ball in tennis, and the sound in trumpet playing. The direct output, however, is rarely the true source of excellence. 
 Often, the most intuitive path toward that target turns out to be the wrong one.</p>
 
-<p>What truly matters is the elegance of the flow: the flow of curiosity and ideas in research, 
+<p>What truly matters is the elegance in the flow: the flow of curiosity and ideas in research, 
 the flow of body movement and coordination in sport, the flow of phrasing and breath in music. 
 Achieving the right balance often requires easing off force rather than applying more; 
-too much effort can get us stuck in the wrong equilibrium. With the flow in mind, 
+too much direct efforts lead to the wrong equilibrium. Using flow as the guiding direction, 
 once the foundational techniques are carefully practiced, the results emerge naturally—
 水到渠成 (“when the water arrives, the channel is formed”).</p>
 
-<p>In all these pursuits, elegance and effectiveness form an optimization problem: 
-how to minimize effort while maximizing impact. Only after balance and efficiency are achieved should force be deliberately added, 
+<p>In all these pursuits, achieving elegance form an optimization problem: Looking away from the direct output, 
+minimize the force to maximize the effect via finding the right muscle alignment. Only after 
+balance and efficiency are achieved should force be deliberately added, 
 transforming balance and efficiency into power and outstanding performance.</p>
 
-<p><img src="https://www.comp.nus.edu.sg/~liangzk/images/hobbies.jpg" width="50%" /></p>
+<p><img src="https://www.comp.nus.edu.sg/~liangzk/images/hobbies.jpg" width="40%" /></p>
 
   </div>
 </div>
@@ -310,7 +311,7 @@ transforming balance and efficiency into power and outstanding performance.</p>
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-10-30
+  Site last updated 2025-10-31
 </div>
 
       </footer>
