--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
 
 <p><strong>Be interesting people, do meaningful work</strong> is the ethos we live by.</p>
 
-<p>I’m also the co-lead Principal Investigator of <a href="https://ncl.sg">National Cybersecurity R&amp;D Laboratory (NCL)</a> of Singapore.</p>
+<p>I’m also the co-lead Principal Investigator of <a href="https://ncl.sg">National Cybersecurity R&amp;D Laboratory (NCL)</a> of Singapore. In NCL, we carry out research, development, and support for cyber experimentation and cyber exercise.</p>
 
-<p>We are looking for curious minds to join our exploration. If you share the same passion, please do not hesitate to reach me. Curiosity is required, while skill and mindset for repairing things (such as bicycles) is a plus. Positions are available at all levels, from undergraduate researcher/interns, Master/Ph.D. students, and postdoc research fellows.</p>
+<p>We are looking for curious minds to join our journey. If you share the same passion, please do not hesitate to reach me. Curiosity is required, while skill and mindset for repairing things (such as bicycles) is a plus. Positions are available at all levels, from undergraduate researcher/interns, Master/Ph.D. students, and postdoc research fellows.</p>
 
-<h1 id="updates">Updates</h1>
+<h2 id="updates">Updates</h2>
 
 <ul>
   <li>September 2025. Our paper on language for tennis analytics won the Outstanding Paper Award at ISACE’25! 🎉 <a href="https://tennis-ans.github.io">Try TANS</a></li>
@@ -355,7 +355,7 @@
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-10-29
+  Site last updated 2025-10-31
 </div>
 
       </footer>
