--- a/publications/index.html
+++ b/publications/index.html
@@ -539,6 +539,12 @@
             </div>
         </li>
             <li><div class="publication">
+                <p class="paper-title">TAPPecker: TAP Logic Inference and Violation Detection in Heterogeneous Smart Home Systems.</p>
+                <p class="authors">Qixiao Lin, Jian Mao, Ziwen Liu, and Zhenkai Liang.</p>
+                <p class="publisher">In International Symposium on Research in Attacks, Intrusions, and Defenses (RAID), 2025.</p>
+            </div>
+        </li>
+            <li><div class="publication">
                 <p class="paper-title">TANS: A Chess-Inspired Notation System for Strategy Analysis of Tennis Games.</p>
                 <p class="authors">Yuexi Song, Chuanfei Li, Hao Cao, Ling Wu, Huanhuan Zheng, and Zhenkai Liang.</p>
                 <p class="publisher">In the 2nd International Sports Analytics Conference and Exhibition (ISACE), 2025.</p>
@@ -646,7 +652,7 @@
             <li><div class="publication">
                 <p class="paper-title">Detecting Logic Bugs in Graph Database Management Systems via Injective and Surjective Graph Query Transformation.</p>
                 <p class="authors">Yuancheng Jiang, Jiahao Liu, Jinsheng Ba, Roland Yap, Zhenkai Liang, and Manuel Rigger.</p>
-                <p class="publisher">In International Conference on Software Engineering (ICSE), May 2024.</p>
+                <p class="publisher">In International Conference on Software Engineering (ICSE), 2024.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -664,7 +670,13 @@
             <li><div class="publication">
                 <p class="paper-title">Learning Graph-based Code Representations for Source-level Functional Similarity Detection.</p>
                 <p class="authors">Jiahao Liu, Jun Zeng, Xiang Wang, and Zhenkai Liang.</p>
-                <p class="publisher">In International Conference on Software Engineering (ICSE), April 2023.</p>
+                <p class="publisher">In International Conference on Software Engineering (ICSE), 2023.</p>
+            </div>
+        </li>
+            <li><div class="publication">
+                <p class="paper-title">PalanTír: Optimizing Attack Provenance with Hardware-enhanced System Observability.</p>
+                <p class="authors">Jun Zeng, Chuqi Zhang, and Zhenkai Liang.</p>
+                <p class="publisher">In the 17th ACM ASIA Conference on Computer and Communications Security (CCS), 2022.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -677,18 +689,6 @@
                 <p class="paper-title">AttacKG: Constructing Technique Knowledge Graph from Cyber Threat Intelligence Reports.</p>
                 <p class="authors">Zhenyuan Li, Jun Zeng, Yan Chen, and Zhenkai Liang.</p>
                 <p class="publisher">In the 27th European Symposium on Research in Computer Security (ESORICS), 2022.</p>
-            </div>
-        </li>
-            <li><div class="publication">
-                <p class="paper-title">RecIPE: Revisiting the Evaluation of Memory Error Defenses.</p>
-                <p class="authors">Yuancheng Jiang, Roland Yap, Zhenkai Liang, and Hubert Rosier.</p>
-                <p class="publisher">In the 17th ACM ASIA Conference on Computer and Communications Security (AsiaCCS), 2022.</p>
-            </div>
-        </li>
-            <li><div class="publication">
-                <p class="paper-title">PalanTír: Optimizing Attack Provenance with Hardware-enhanced System Observability.</p>
-                <p class="authors">Jun Zeng, Chuqi Zhang, and Zhenkai Liang.</p>
-                <p class="publisher">In the 17th ACM ASIA Conference on Computer and Communications Security (CCS), 2022.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -707,6 +707,12 @@
                 <p class="paper-title">TeLL: Log Level Suggestions via Modeling Multi-level Code Block Information.</p>
                 <p class="authors">Jiahao Liu, Jun Zeng, Xiang Wang, Kaihang Ji, and Zhenkai Liang.</p>
                 <p class="publisher">In the 31st ACM SIGSOFT International Symposium on Software Testing and Analysis (ISSTA), 2022.</p>
+            </div>
+        </li>
+            <li><div class="publication">
+                <p class="paper-title">RecIPE: Revisiting the Evaluation of Memory Error Defenses.</p>
+                <p class="authors">Yuancheng Jiang, Roland Yap, Zhenkai Liang, and Hubert Rosier.</p>
+                <p class="publisher">In the 17th ACM ASIA Conference on Computer and Communications Security (AsiaCCS), 2022.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -796,9 +802,9 @@
             </div>
         </li>
             <li><div class="publication">
-                <p class="paper-title">Enabling practical experimentation in cyber-security training.</p>
-                <p class="authors">Jian Mao, Zheng Leong Chua, and Zhenkai Liang.</p>
-                <p class="publisher">In International Conference on Dependable Systems and Communications (DSC), 2017.</p>
+                <p class="paper-title">Automatically Assessing Crashes From Heap Overflows.</p>
+                <p class="authors">Liang He, Yan Cai, Hong Hu, Purui Su, Zhenkai Liang, Yi Yang, Huafeng Huang, Jia Yan, Xiangkun Jia, and Dengguo Feng.</p>
+                <p class="publisher">In the 32nd IEEE/ACM International Conference on Automated Software Engineering (ASE), 2017.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -808,9 +814,9 @@
             </div>
         </li>
             <li><div class="publication">
-                <p class="paper-title">Automatically Assessing Crashes From Heap Overflows.</p>
-                <p class="authors">Liang He, Yan Cai, Hong Hu, Purui Su, Zhenkai Liang, Yi Yang, Huafeng Huang, Jia Yan, Xiangkun Jia, and Dengguo Feng.</p>
-                <p class="publisher">In the 32nd IEEE/ACM International Conference on Automated Software Engineering (ASE), 2017.</p>
+                <p class="paper-title">Enabling practical experimentation in cyber-security training.</p>
+                <p class="authors">Jian Mao, Zheng Leong Chua, and Zhenkai Liang.</p>
+                <p class="publisher">In International Conference on Dependable Systems and Communications (DSC), 2017.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -892,16 +898,16 @@
             </div>
         </li>
             <li><div class="publication">
-                <p class="paper-title">Understanding Complex Binary Loading Behaviors.</p>
-                <p class="authors">Ting Dai, Mingwei Zhang, Roland H. C. Yap, and Zhenkai Liang.</p>
-                <p class="publisher">In the 19th International Conference on Engineering of Complex Computer Systems (ICECCS), 2014.</p>
-            </div>
-        </li>
-            <li><div class="publication">
                 <p class="paper-title">DroidVault: A Trusted Data Vault for Android Devices.</p>
                 <p class="authors">Xiaolei Li, Hong Hu, Guangdong Bai, Yaoqi Jia, Zhenkai Liang, and Prateek Saxena.</p>
                 <p class="publisher">In the 19th International Conference on Engineering of Complex Computer Systems (ICECCS), 2014.</p>
                 <font color="red">Best Paper Award</font>
+            </div>
+        </li>
+            <li><div class="publication">
+                <p class="paper-title">Understanding Complex Binary Loading Behaviors.</p>
+                <p class="authors">Ting Dai, Mingwei Zhang, Roland H. C. Yap, and Zhenkai Liang.</p>
+                <p class="publisher">In the 19th International Conference on Engineering of Complex Computer Systems (ICECCS), 2014.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -917,15 +923,15 @@
             </div>
         </li>
             <li><div class="publication">
-                <p class="paper-title">TrustFound: Towards a Formal Foundation for Model Checking Trusted Computing Platforms.</p>
-                <p class="authors">Guangdong Bai, Jianan Hao, Jianliang Wu, Yang Liu, Zhenkai Liang, and Andrew P. Martin.</p>
-                <p class="publisher">In the 19th International Symposium on Formal Method (FM), 2014.</p>
+                <p class="paper-title">I Know Where You’ve Been: Geo-Inference Attacks via the Browser Cache.</p>
+                <p class="authors">Yaoqi Jia, Xinshu Dong, Zhenkai Liang, and Prateek Saxena.</p>
+                <p class="publisher">In Web 2.0 Security & Privacy Workshop 2014 (W2SP), 2014.</p>
             </div>
         </li>
             <li><div class="publication">
-                <p class="paper-title">I Know Where You’ve Been: Geo-Inference Attacks via the Browser Cache.</p>
-                <p class="authors">Yaoqi Jia, Xinshu Dong, Zhenkai Liang, and Prateek Saxena.</p>
-                <p class="publisher">In Web 2.0 Security & Privacy Workshop (W2SP), 2014.</p>
+                <p class="paper-title">TrustFound: Towards a Formal Foundation for Model Checking Trusted Computing Platforms.</p>
+                <p class="authors">Guangdong Bai, Jianan Hao, Jianliang Wu, Yang Liu, Zhenkai Liang, and Andrew P. Martin.</p>
+                <p class="publisher">In the 19th International Symposium on Formal Method (FM), 2014.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -983,15 +989,15 @@
             </div>
         </li>
             <li><div class="publication">
-                <p class="paper-title">Codejail: Application-Transparent Isolation of Libraries with Tight Program Interactions.</p>
-                <p class="authors">Yongzheng Wu, Sai Sathyanarayan, Roland H. C. Yap, and Zhenkai Liang.</p>
-                <p class="publisher">In the 17th European Symposium on Computer Security (ESORICS), 2012.</p>
-            </div>
-        </li>
-            <li><div class="publication">
                 <p class="paper-title">An Empirical Study of Dangerous Behaviors in Firefox Extensions.</p>
                 <p class="authors">Jiangang Wang, Xiaohong Li, Xuhui Liu, Xinshu Dong, Junjie Wang, Zhenkai Liang, and Zhiyong Feng.</p>
                 <p class="publisher">In the 15th International Conference on Information Security (ISC), 2012.</p>
+            </div>
+        </li>
+            <li><div class="publication">
+                <p class="paper-title">Codejail: Application-Transparent Isolation of Libraries with Tight Program Interactions.</p>
+                <p class="authors">Yongzheng Wu, Sai Sathyanarayan, Roland H. C. Yap, and Zhenkai Liang.</p>
+                <p class="publisher">In the 17th European Symposium on Computer Security (ESORICS), 2012.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -1144,6 +1150,7 @@
         </ol>
     </div>
 
+
 <strong>Journal:</strong>
 
         <div class="publications-container">
@@ -1175,7 +1182,7 @@
             <li><div class="publication">
                 <p class="paper-title">Phishing Page Detection via Learning Classifiers from Page Layout Feature.</p>
                 <p class="authors">Jian Mao, Jingdong Bian, Wenqian Tian, Shishi Zhu, Tao Wei, Aili Li, and Zhenkai Liang.</p>
-                <p class="publisher">In EURASIP Journal on Wireless Communications and Networking (EURASIP JWCN), 2019.</p>
+                <p class="publisher">In EURASIP Journal on Wireless Communications and Networking (EURASIP JWCN), Volume 2019, 2019.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -1185,15 +1192,15 @@
             </div>
         </li>
             <li><div class="publication">
-                <p class="paper-title">Detecting Malicious Behaviors in JavaScript Applications.</p>
-                <p class="authors">Jian Mao, Jingdong Bian, Ruilong Wang, Yue Chen, Yinhao Xiao, and Zhenkai Liang.</p>
-                <p class="publisher">In IEEE Access, Volume 6, 2018.</p>
-            </div>
-        </li>
-            <li><div class="publication">
                 <p class="paper-title">Automated Identification of Sensitive Data from Implicit User Specification.</p>
                 <p class="authors">Ziqi Yang, and Zhenkai Liang.</p>
                 <p class="publisher">In Cybersecurity, Volume 1, Issue 1, 2018.</p>
+            </div>
+        </li>
+            <li><div class="publication">
+                <p class="paper-title">Detecting Malicious Behaviors in JavaScript Applications.</p>
+                <p class="authors">Jian Mao, Jingdong Bian, Ruilong Wang, Yue Chen, Yinhao Xiao, and Zhenkai Liang.</p>
+                <p class="publisher">In IEEE Access, Volume 6, 2018.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -1217,25 +1224,25 @@
             <li><div class="publication">
                 <p class="paper-title">Monet: A User-Oriented Behavior-Based Malware Variants Detection System for Android.</p>
                 <p class="authors">Mingshen Sun, Xiaolei Li, John C.S. Lui, Richard T. Ma, and Zhenkai Liang.</p>
-                <p class="publisher">In IEEE Transactions on Information Forensics and Security (TIFS), 2017.</p>
+                <p class="publisher">In IEEE Transactions on Information Forensics and Security (TIFS), Volume 12, Issue 5, 2017.</p>
             </div>
         </li>
             <li><div class="publication">
                 <p class="paper-title">A Framework for Practical Dynamic Software Updating.</p>
                 <p class="authors">Gang Chen, Hai Jin, Deqing Zou, Zhenkai Liang, Bing Bing Zhou, and Hao Wang.</p>
-                <p class="publisher">In IEEE Transactions on Parallel and Distributed Systems (TPDS), 2017.</p>
+                <p class="publisher">In IEEE Transactions on Parallel and Distributed Systems (TPDS), Volume 27, Issue 4, 2017.</p>
             </div>
         </li>
             <li><div class="publication">
                 <p class="paper-title">Toward Exposing Timing-Based Probing Attacks in Web Application.</p>
                 <p class="authors">Jian Mao, Yue Chen, Futian Shi, Yaoqi Jia, and Zhenkai Liang.</p>
-                <p class="publisher">In Sensors, 2017.</p>
+                <p class="publisher">In Sensors, Volume 17, Issue 3, 2017.</p>
             </div>
         </li>
             <li><div class="publication">
                 <p class="paper-title">Man-in-the-browser-cache: Persisting HTTPS Attacks via Browser Cache Poisoning.</p>
                 <p class="authors">Yaoqi Jia, Yue Chen, Xinshu Dong, Prateek Saxena, Jian Mao, and Zhenkai Liang.</p>
-                <p class="publisher">In Computer & Security, 2016.</p>
+                <p class="publisher">In Computer & Security, Volume 55, 2016.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -1247,13 +1254,13 @@
             <li><div class="publication">
                 <p class="paper-title">Automatic Permission Inference for Hybrid Mobile Apps.</p>
                 <p class="authors">Jian Mao, Hanjun Ma, Yue Chen, Yaoqi Jia, and Zhenkai Liang.</p>
-                <p class="publisher">In Journal of High Speed Networks, 2016.</p>
+                <p class="publisher">In Journal of High Speed Networks, Volume 22, Issue 1, 2016.</p>
             </div>
         </li>
             <li><div class="publication">
                 <p class="paper-title">SafeStack: Automatically Patching Stack-based Buffer Overflow Vulnerabilities.</p>
                 <p class="authors">Gang Chen, Hai Jin, Deqing Zou, Bing Bing Zhou, Zhenkai Liang, Weide Zheng, and Xuanhua Shi.</p>
-                <p class="publisher">In IEEE Transactions on Dependable and Secure Computing (TDSC), 2015.</p>
+                <p class="publisher">In IEEE Transactions on Dependable and Secure Computing (TDSC), Volume 10, Issue 6, 2015.</p>
             </div>
         </li>
             <li><div class="publication">
@@ -1265,23 +1272,24 @@
             <li><div class="publication">
                 <p class="paper-title">I Know Where You’ve Been: Geo-Inference Attacks via the Browser Cache.</p>
                 <p class="authors">Yaoqi Jia, Xinshu Dong, Zhenkai Liang, and Prateek Saxena.</p>
-                <p class="publisher">In IEEE Internet Computing, 2015.</p>
+                <p class="publisher">In IEEE Internet Computing, Volume 19, Issue 1, 2015.</p>
             </div>
         </li>
             <li><div class="publication">
                 <p class="paper-title">DARWIN: An Approach for Debugging Evolving Programs.</p>
                 <p class="authors">Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil Vaswani.</p>
-                <p class="publisher">In ACM Transactions on Software Engineering and Methodology (TOSEM), 2013.</p>
+                <p class="publisher">In ACM Transactions on Software Engineering and Methodology (TOSEM), Volume 21, Issue 3, 2013.</p>
             </div>
         </li>
             <li><div class="publication">
                 <p class="paper-title">Alcatraz: An Isolated Environment for Experimenting with Untrusted Software.</p>
                 <p class="authors">Zhenkai Liang, Weiqing Sun, R. Sekar, and V.N. Venkatakrishnan.</p>
-                <p class="publisher">In ACM Transactions on Information and System Security (TISSEC), 2009.</p>
+                <p class="publisher">In ACM Transactions on Information and System Security (TISSEC), Volume 12, Issue 3, 2009.</p>
             </div>
         </li>
         </ol>
     </div>
+
 
 
   </div>
@@ -1316,7 +1324,7 @@
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-10-30
+  Site last updated 2025-10-31
 </div>
 
       </footer>
