--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
   <li>Connect facts (参悟规律).</li>
 </ul>
 
-<p><strong>Be interesting people, do meaningful work</strong> is the ethos we live by.</p>
+<p><strong>Be interesting people, do meaningful work</strong> is the ethos we live by. We strive to embody this ethos — to think deeply, collaborate openly, and act purposefully, seeking both <em>elegance in thought</em> and <em>meaning in action</em>.</p>
 
 <p>I’m also the co-lead Principal Investigator of <a href="https://ncl.sg">National Cybersecurity R&amp;D Laboratory (NCL)</a> of Singapore. In NCL, we carry out research, development, and support for cyber experimentation and cyber exercise.</p>
 
