--- a/research/index.html
+++ b/research/index.html
@@ -262,7 +262,7 @@
 
 <h1 id="research-directions">Research Directions</h1>
 
-<p>Project pages to be included from my group website.</p>
+<p><em>Project pages will be included from my group website.</em></p>
 
 <h3 id="system-security-and-cyber-experimentation-analysis">System security and cyber experimentation analysis</h3>
 <ul>
@@ -294,25 +294,18 @@
 
 <h2 id="research-awards">Research Awards</h2>
 
-<ol>
+<ul>
   <li>Distinguished Paper Award, the 34th USENIX Security Symposium, 2025.</li>
-  <li>Distinguished Paper Award, the 2nd International Sports Analytics Confer-
-ence and Exhibition (ISACE), 2025.</li>
-  <li>Best Practical Paper Award, the 27th International Symposium on Research in
-Attacks, Intrusions and Defenses (RAID), 2024.</li>
-  <li>Distinguished Paper Award Honorable Mentions, the 21st Network and Dis-
-tributed System Security Symposium (NDSS), 2019.</li>
-  <li>Best Paper Award, the 14th International Conference on Wireless Algorithms,
-Systems, and Applications (WASA), 2019.</li>
-  <li>Best Paper Award, the 19th International Conference on Engineering of Com-
-plex Computer Systems (ICECCS), 2014.</li>
+  <li>Distinguished Paper Award, the 2nd International Sports Analytics Conference and Exhibition (ISACE), 2025.</li>
+  <li>Best Practical Paper Award, the 27th International Symposium on Research in Attacks, Intrusions and Defenses (RAID), 2024.</li>
+  <li>Distinguished Paper Award Honorable Mentions, the 21st Network and Distributed System Security Symposium (NDSS), 2019.</li>
+  <li>Best Paper Award, the 14th International Conference on Wireless Algorithms, Systems, and Applications (WASA), 2019.</li>
+  <li>Best Paper Award, the 19th International Conference on Engineering of Complex Computer Systems (ICECCS), 2014.</li>
   <li>Best Paper Award, Web 2.0 Security &amp; Privacy Workshop (W2SP), 2014.</li>
-  <li>ACM SIGSOFT Distinguished Paper Award, the ESEC and ACM SIGSOFT
-Symposium on the Foundations of Software Engineering (ESEC-FSE), 2009.</li>
+  <li>ACM SIGSOFT Distinguished Paper Award, the ESEC and ACM SIGSOFT Symposium on the Foundations of Software Engineering (ESEC-FSE), 2009.</li>
   <li>Best Paper Award, the 16th USENIX Security Symposium, 2007.</li>
-  <li>Outstanding Paper Award, the 19th Annual Computer Security Applications
-Conference (ACSAC), 2003.</li>
-</ol>
+  <li>Outstanding Paper Award, the 19th Annual Computer Security Applications Conference (ACSAC), 2003.</li>
+</ul>
 
   </div>
 </div>
@@ -346,7 +339,7 @@ Conference (ACSAC), 2003.</li>
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-10-31
+  Site last updated 2025-11-01
 </div>
 
       </footer>
