--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@
   <li>Connect facts (参悟规律).</li>
 </ul>
 
-<p><strong>Be interesting people, do meaningful work</strong> is the ethos we live by. We strive to embody this ethos — to think deeply, collaborate openly, and act purposefully, seeking <em>elegance in thought</em> and <em>meaning in action</em>.</p>
+<p><strong>Be an interesting person, do meaningful work</strong> is the ethos I live by. I strive to embody this ethos — to think deeply, collaborate openly, and act purposefully, seeking <em>elegance in thought</em> and <em>meaning in action</em>.</p>
 
-<p>I’m also the co-lead Principal Investigator of <a href="https://ncl.sg">National Cybersecurity R&amp;D Laboratory (NCL)</a> of Singapore. In NCL, we carry out research, development, and support for cyber experimentation and cyber exercise.</p>
+<p>I am also the co-lead Principal Investigator of <a href="https://ncl.sg">National Cybersecurity R&amp;D Laboratory (NCL)</a> of Singapore. In NCL, we carry out research, development, and support for cyber experimentation and cyber exercise.</p>
 
-<p>We are looking for curious minds to join our journey. If you share the same passion, please do not hesitate to reach me. Curiosity is required, while skill and mindset for repairing things (such as bicycles) is a plus. Positions are available at all levels, from undergraduate researcher/interns, Master/Ph.D. students, and postdoc research fellows.</p>
+<p>I am looking for curious minds to join our journey. If you share the same passion, please do not hesitate to reach me. Curiosity is required, while skill and mindset for repairing things (such as bicycles) is a plus. Positions are available at all levels, from undergraduate researcher/interns, Master/Ph.D. students, and postdoc research fellows.</p>
 
 <h2 id="updates">Updates</h2>
 
