--- a/research/index.html
+++ b/research/index.html
@@ -262,9 +262,8 @@
 
 <h1 id="research-directions">Research Directions</h1>
 
-<p><em>Project pages will be included from my group website.</em></p>
-
 <h3 id="system-security-and-cyber-experimentation-analysis">System security and cyber experimentation analysis</h3>
+<p><a href="https://www.comp.nus.edu.sg/~liangzk/publications/system.html">[Related Publications]</a></p>
 <ul>
   <li>Kernel mechanisms for confidential computing</li>
   <li>System provence mechanisms and analysis techniques</li>
@@ -272,24 +271,27 @@
 </ul>
 
 <h3 id="software-security-and-malicious-application-analysis">Software security and malicious application analysis</h3>
+<p><a href="https://www.comp.nus.edu.sg/~liangzk/publications/software.html">[Related Publications]</a></p>
 <ul>
   <li>Vulnerability discovery and analysis</li>
   <li>Binary analysis and protection</li>
   <li>Mobile malware analysis</li>
 </ul>
 
-<h3 id="ai-security-from-system-principles">AI Security from system principles</h3>
+<h3 id="ai-security-from-system-principles">AI security from system principles</h3>
+<p><a href="https://www.comp.nus.edu.sg/~liangzk/publications/aisys.html">[Related Publications]</a></p>
 <ul>
   <li>Application of AI and recommendation system in software and system security</li>
   <li>LLM security analysis using software security techniques</li>
   <li>Agent system analysis and security</li>
 </ul>
 
-<h3 id="security-beyond-systems">Security beyond systems</h3>
+<h3 id="beyond-security-and-systems">Beyond security and systems</h3>
+<p><a href="https://www.comp.nus.edu.sg/~liangzk/publications/beyond.html">[Related Publications]</a></p>
 <ul>
   <li>Online scam prevention</li>
-  <li>Financial modeling of cyber crime</li>
-  <li>Cyber risk modeling and cyber insurance</li>
+  <li>Financial modeling of cyber crime and cyber incidents</li>
+  <li>Cyber insurance and cyber risk analysis</li>
 </ul>
 
 <h2 id="research-awards">Research Awards</h2>
