--- a/hobby/index.html
+++ b/hobby/index.html
@@ -257,10 +257,9 @@
       <h1 class="page__title">Hobby</h1>
     
     <h2 id="sports-music-and-research">Sports, Music, and Research</h2>
-<p>I like riding and repairing bicycles. Recently I am trying tennis and trumpet, but I end up writing a <a href="https://tennis-ans.github.io">paper</a> about tennis. :)</p>
+<p>I enjoy riding and repairing bicycles. Recently I am trying tennis and trumpet. Through the long conditioning of a Ph.D. (jokingly, “Permanent Head Damage”) training and my subsequent career, I can’t help but write a <a href="https://tennis-ans.github.io">paper</a> about tennis. :)</p>
 
-<p>Through the long conditioning of a Ph.D. (“Permanent Head Damage”) training and my subsequent career, 
-I can’t help but notice how research shares deep parallels with arts, crafts, and sports. 
+<p>I also notice how research shares striking parallels with arts, crafts, and sports. 
 In each domain, our attention is often pulled toward the most obvious target: the paper in research, 
 the ball in tennis, and the sound in trumpet playing. The direct output, however, is rarely the true source of excellence. 
 Often, the most intuitive path toward that target turns out to be the wrong one.</p>
@@ -268,7 +267,7 @@ Often, the most intuitive path toward that target turns out to be the wrong one.
 <p>What truly matters is the elegance in the flow: the flow of curiosity and ideas in research, 
 the flow of body movement and coordination in sport, the flow of phrasing and breath in music. 
 Achieving the right balance often requires easing off force rather than applying more; 
-too much direct efforts lead to the wrong equilibrium. Using flow as the guiding direction, 
+too much direct efforts lead to an incorrect equilibrium. Using flow as the guiding direction, 
 once the foundational techniques are carefully practiced, the results emerge naturally—
 水到渠成 (“when the water arrives, the channel is formed”).</p>
 
