publication sub areas

--- a/publications/system.html
+++ b/publications/system.html
@@ -67,8 +67,8 @@
                 <p class="paper-title">Kernel Auditing using Augmented Reference Behavior Analysis and Virtualized Selective Tracing.</p>
                 <p class="authors">Chuqi Zhang, Spencer Faith, Feras Al-Qassas, Theodorus Wensan Februanto, Zhenkai Liang, and Adil Ahmad.</p>
                 <p class="publisher">In the 47th IEEE Symposium on Security and Privacy (S&P), 2026.</p>
-            </div></li>
-        </ol>
+            </div>
+        </li>
             <li><div class="publication">
                 <p class="paper-title">Signals and Symptoms: ICS Attack Dataset from Railway Cyber Range.</p>
                 <p class="authors">Anis Yusof, Yuancheng Liu, Niklaus Kang, Choon Meng Seah, and Zhenkai Liang and Ee-Chien Chang.</p>
@@ -167,10 +167,7 @@
                 <p class="publisher">In the 8th ACM SIGSAC symposium on Information, computer and communications security (AsiaCCS), 2013.</p>
             </div>
         </li>
-
-
-
-
+        </ol>
 
   </div>
 </div>
