--- a/publications/beyond.html
+++ b/publications/beyond.html
@@ -87,8 +87,24 @@
                 <font color="red">Distinguished Paper Award</font>
             </div>
         </li>
-
-
+            <li><div class="publication">
+                <p class="paper-title">UIHash: Detecting Similar Android UIs through Grid-Based Visual Appearance Representation.</p>
+                <p class="authors">Jiawei Li, Jian Mao, Jun Zeng, Qixiao Lin, Shaowen Feng, and Zhenkai Liang.</p>
+                <p class="publisher">In the 33rd USENIX Security Symposium, 2024.</p>
+            </div>
+        </li>
+            <li><div class="publication">
+                <p class="paper-title">Phishing-Alarm: Robust and Efficient Phishing Detection via Page Component Similarity.</p>
+                <p class="authors">Jian Mao, Jingdong Bian, Wenqian Tian, Pei Li, Tao Wei, and Zhenkai Liang.</p>
+                <p class="publisher">In IEEE Access, Volume 5, 2017.</p>
+            </div>
+        </li>
+            <li><div class="publication">
+                <p class="paper-title">Tool, Technique, and Tao in Computer Security Education.</p>
+                <p class="authors">Zhenkai Liang, and Jian Mao.</p>
+                <p class="publisher">In IEEE Reliability Newsletter Special Issues, 2015.</p>
+            </div>
+        </li>
 
         </ol>
   </div>
