--- a/publications/software.html
+++ b/publications/software.html
@@ -198,9 +198,26 @@
             </div>
         </li>
             <li><div class="publication">
+                <p class="paper-title">DTaint: Detecting the Taint-Style Vulnerability in Embedded Device Firmware.</p>
+                <p class="authors">Kai Cheng, Qiang Li, Lei Wang, Qian Chen, Yaowen Zheng, Limin Sun, and Zhenkai Liang.</p>
+                <p class="publisher">In the 48th IEEE/IFIP International Conference on Dependable Systems and Networks (DSN), 2018.</p>
+            </div>
+        </li>            <li><div class="publication">
                 <p class="paper-title">HOMESCAN: Scrutinizing Implementations of Smart Home Integrations.</p>
                 <p class="authors">Kulani Tharaka Mahadewa, Kailong Wang, Guangdong Bai, Ling Shi, Jin Song Dong, and Zhenkai Liang.</p>
                 <p class="publisher">In the 23rd International Conference on Engineering of Complex Computer Systems (ICECCS), 2018.</p>
+            </div>
+        </li>
+            <li><div class="publication">
+                <p class="paper-title">A Novel Graph-based Mechanism for Identifying Traffic Vulnerabilities in Smart Home IoT.</p>
+                <p class="authors">Yizhen Jia, Yinhao Xiao, Jiguo Yu, Xiuzhen Cheng, Zhenkai Liang, and Zhiguo Wan.</p>
+                <p class="publisher">In IEEE Conference on Computer Communications (INFOCOM), 2018.</p>
+            </div>
+        </li>
+            <li><div class="publication">
+                <p class="paper-title">Automatically Assessing Crashes From Heap Overflows.</p>
+                <p class="authors">Liang He, Yan Cai, Hong Hu, Purui Su, Zhenkai Liang, Yi Yang, Huafeng Huang, Jia Yan, Xiangkun Jia, and Dengguo Feng.</p>
+                <p class="publisher">In the 32nd IEEE/ACM International Conference on Automated Software Engineering (ASE), 2017.</p>
             </div>
         </li>
             <li><div class="publication">
