--- a/publications/system.html
+++ b/publications/system.html
@@ -149,6 +149,11 @@
             </div>
         </li>
             <li><div class="publication">
+                <p class="paper-title">Enabling Practical Experimentation in Cyber-security Training.</p>
+                <p class="authors">Jian Mao, Zheng Leong Chua, and Zhenkai Liang.</p>
+                <p class="publisher">In International Conference on Dependable Systems and Communications (DSC), 2017.</p>
+            </div>
+        </li>            <li><div class="publication">
                 <p class="paper-title">DroidVault: A Trusted Data Vault for Android Devices.</p>
                 <p class="authors">Xiaolei Li, Hong Hu, Guangdong Bai, Yaoqi Jia, Zhenkai Liang, and Prateek Saxena.</p>
                 <p class="publisher">In the 19th International Conference on Engineering of Complex Computer Systems (ICECCS), 2014.</p>
