--- a/publications/beyond.html
+++ b/publications/beyond.html
@@ -94,6 +94,11 @@
             </div>
         </li>
             <li><div class="publication">
+                <p class="paper-title">Robust Detection of Android UI Similarity.</p>
+                <p class="authors">Jian Mao, Jingdong Bian, Hanjun Ma, Yaoqi Jia, Zhenkai Liang, and Xuxian Jiang.</p>
+                <p class="publisher">In IEEE International Conference on Communications (ICC), 2018.</p>
+            </div>
+        </li>            <li><div class="publication">
                 <p class="paper-title">Phishing-Alarm: Robust and Efficient Phishing Detection via Page Component Similarity.</p>
                 <p class="authors">Jian Mao, Jingdong Bian, Wenqian Tian, Pei Li, Tao Wei, and Zhenkai Liang.</p>
                 <p class="publisher">In IEEE Access, Volume 5, 2017.</p>
