--- a/publications/beyond.html
+++ b/publications/beyond.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Publications - Zhenkai Liang</title>
+    <title>Publications - Beyond Systems</title>
 
     <!-- http://t.co/dKP3o1e -->
     <meta name="HandheldFriendly" content="True">
