--- a/publications/software.html
+++ b/publications/software.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Publications - Zhenkai Liang</title>
+    <title>Publications - Software</title>
 
     <!-- http://t.co/dKP3o1e -->
     <meta name="HandheldFriendly" content="True">
@@ -221,6 +221,11 @@
             </div>
         </li>
             <li><div class="publication">
+                <p class="paper-title">Neural Nets Can Learn Function Type Signatures From Binaries.</p>
+                <p class="authors">Zheng Leong Chua, Shiqi Shen, Prateek Saxena, and Zhenkai Liang.</p>
+                <p class="publisher">In the 26th USENIX Security Symposium, 2017.</p>
+            </div>
+        </li>            <li><div class="publication">
                 <p class="paper-title">"The Web/Local" Boundary Is Fuzzy: A Security Study of Chrome's Process-based Sandboxing.</p>
                 <p class="authors">Yaoqi Jia, Zheng Leong Chua, Hong Hu, Shuo Chen, Prateek Saxena, and Zhenkai Liang.</p>
                 <p class="publisher">In ACM SIGSAC Conference on Computer and Communications Security (CCS), 2016.</p>
