--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
 <h2 id="updates">Updates</h2>
 
 <ul>
-  <li>September 2025. Our paper on language for tennis analytics won the Outstanding Paper Award at ISACE’25! 🎉 <a href="https://tennis-ans.github.io">Try TANS</a></li>
-  <li>August 2025. Our USENIX Security 2025 paper on PHP Fuzzing won the Outstanding Paper Award! 🎉</li>
+  <li>September 2025. Our paper on language for tennis analytics won the Distinguished Paper Award at ISACE’25! 🎉 <a href="https://tennis-ans.github.io">Try TANS</a></li>
+  <li>August 2025. Our USENIX Security 2025 paper on PHP Fuzzing won the Distinguished Paper Award! 🎉</li>
 </ul>
 
 <p>More news and updates can be found on our group and lab’s websites <a href="https://curiosity.comp.nus.edu.sg/">Curiosity</a> and <a href="https://ncl.sg">NCL</a>.</p>
@@ -355,7 +355,7 @@
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-11-01
+  Site last updated 2025-11-02
 </div>
 
       </footer>
