--- a/research/index.html
+++ b/research/index.html
@@ -273,8 +273,8 @@
 <h3 id="software-security-and-malicious-application-analysis">Software security and malicious application analysis</h3>
 <p><a href="https://www.comp.nus.edu.sg/~liangzk/publications/software.html">[Related Publications]</a></p>
 <ul>
-  <li>Vulnerability discovery and analysis</li>
-  <li>Binary analysis and protection</li>
+  <li>Scalable binary/program analysis for vulnerability discovery</li>
+  <li>Testing and analysis for non-traditional bug types</li>
   <li>Mobile malware analysis</li>
 </ul>
 
@@ -297,8 +297,8 @@
 <h2 id="research-awards">Research Awards</h2>
 
 <ul>
-  <li>Distinguished Paper Award, the 34th USENIX Security Symposium, 2025.</li>
   <li>Distinguished Paper Award, the 2nd International Sports Analytics Conference and Exhibition (ISACE), 2025.</li>
+  <li>Distinguished Paper Award, the 34th USENIX Security Symposium, 2025.</li>
   <li>Best Practical Paper Award, the 27th International Symposium on Research in Attacks, Intrusions and Defenses (RAID), 2024.</li>
   <li>Distinguished Paper Award Honorable Mentions, the 21st Network and Distributed System Security Symposium (NDSS), 2019.</li>
   <li>Best Paper Award, the 14th International Conference on Wireless Algorithms, Systems, and Applications (WASA), 2019.</li>
@@ -341,7 +341,7 @@
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-11-01
+  Site last updated 2025-11-02
 </div>
 
       </footer>
