--- a/hobby/index.html
+++ b/hobby/index.html
@@ -284,9 +284,9 @@ transforming balance and efficiency into power and outstanding performance.</p>
 
 <p>博士训练往往漫长而苛刻，有人调侃Ph.D.是“永久性脑损伤”(Permenant Head Damage)。然而在这样的过程中，我学到的不只是如何写论文，更是如何观察、体会和思考事物的背后联系。我发现运动、音乐和运动之间存在着出乎意料的相似之处。不过我还是没忍住，写了一篇关于网球的<a href="https://tennis-ans.github.io">论文</a>. :)</p>
 
-<p>在这三个领域中，人们往往会被最直接的目标吸引——研究中的发表论文，网球运动里的击球，音乐中的乐器发声。但真正决定水平高低的，从来不是这些外在的直接结果。最符合直觉、显而易见的路径，可能很快有结果，但往往不是通向卓越的那一条，甚至会是与卓越完全背道而驰，形似神离。</p>
+<p>在这三个领域中，人们往往会被最直接的目标吸引 — 研究中的发表论文，网球运动里的击球，音乐中的乐器发声。但真正决定水平高低的，从来不是这些外在的直接结果。最符合直觉、显而易见的路径，可能很快有结果，但往往不是通向卓越的那一条，甚至会是与卓越完全背道而驰，形似神离。</p>
 
-<p>决定一切的，是内心中的流动性。研究中的好奇与思路的流动，运动中身体的协调与节奏的流动，音乐中呼吸与旋律的流动。它们的共同点在于：只有学会顺势而为，而不是费力拉扯，平衡才会出现。真正的挑战是如何学会去收力，而不是去盲目发力。在直接的目标上过度用力会陷在一个错误的平衡中。真正的掌控，来自紧张中恰到好处的放松，而不是更大的用力。尊重事物本身的规律，以其中优美的流动性为向导，当用在正确的基本上方法的努力达到时，结果会自然出现——水到渠成。</p>
+<p>决定一切的，是内心中的流动性。研究中的好奇与思路的流动，运动中身体的协调与节奏的流动，音乐中呼吸与旋律的流动。它们的共同点在于：只有学会顺势而为，而不是费力拉扯，平衡才会出现。真正的挑战是如何学会去收力，而不是去盲目发力。在直接的目标上过度用力会陷在一个错误的平衡中。真正的掌控，来自紧张中恰到好处的放松，而不是更大的用力。尊重事物本身的规律，以其中优美的流动性为向导，当用在正确的基本上方法的努力达到时，结果会自然出现 — 水到渠成。至道常隐于形外。</p>
 
 <p>这种过程是一种“优化问题”。要获得优雅的效率，就必须把注意力从结果上移开，转向理解过程本身。先让动作、思考或技巧达到自然的协调，再去逐渐增加力量并保持平衡。努力并非目标，而是平衡与效率自然积累的产物。</p>
 
@@ -299,22 +299,6 @@ transforming balance and efficiency into power and outstanding performance.</p>
     <div class="page__footer">
       <footer>
         <!-- start custom footer snippets -->
-
-<a href="/sitemap/">Sitemap</a>
-
-<!-- Support for MatJax -->
-<script defer src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script"></script>
-
-<!-- Support for Plotly -->
-<script defer src='https://cdnjs.cloudflare.com/ajax/libs/plotly.js/3.0.1/plotly.min.js'></script>
-
-<!-- Support for Mermaid -->
-<script type="module">
-    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
-    mermaid.initialize({startOnLoad:true, theme:'default'});
-    await mermaid.run({querySelector:'code.language-mermaid'});
-</script>
 
 <!-- end custom footer snippets -->
 
