--- a/hobby/index.html
+++ b/hobby/index.html
@@ -276,6 +276,8 @@ minimize the force to maximize the effect via finding the right muscle alignment
 balance and efficiency are achieved should force be deliberately added, 
 transforming balance and efficiency into power and outstanding performance.</p>
 
+<p>Often, the breakthrough we seek does not come from greater efforts, but from learning how to let things unfold naturally.</p>
+
 <div style="text-align: center;"><img src="https://www.comp.nus.edu.sg/~liangzk/images/hobbies.jpg" width="40%" /></div>
 
 <h2 id="运动音乐与研究">运动、音乐与研究</h2>
