--- a/hobby/index.html
+++ b/hobby/index.html
@@ -257,16 +257,13 @@
       <h1 class="page__title">Hobby</h1>
     
     <h2 id="sports-music-and-research">Sports, Music, and Research</h2>
-<p>I enjoy <a href="https://www.comp.nus.edu.sg/~liangzk/images/bike.jpg">riding bicycles</a> and <a href="https://www.comp.nus.edu.sg/~liangzk/images/rbike.jpg">repairing bicycles</a>（aka bicycle reverse engineering). Recently I have been exploring tennis and trumpet. These pursuits may seem unrelated, yet through their practice, I’ve come to reinterpret the inner meaning of “research.” Through the long conditioning of a Ph.D. (jokingly, “Permanent Head Damage”) training and my subsequent career, I can’t help but write a <a href="https://tennis-ans.github.io">paper</a> about tennis. :)</p>
+<p>I enjoy <a href="https://www.comp.nus.edu.sg/~liangzk/images/bike.jpg">riding bicycles</a> and <a href="https://www.comp.nus.edu.sg/~liangzk/images/rbike.jpg">repairing bicycles</a>（aka bicycle reverse engineering). Recently I have been exploring tennis and trumpet. These pursuits may seem unrelated, yet through their practice, I have come to reinterpret the inner meaning of “research.” Through the long conditioning of a Ph.D. (jokingly, “Permanent Head Damage”) training and my subsequent career, I can’t help but write a <a href="https://tennis-ans.github.io">paper</a> about tennis. :)</p>
 
-<p>Through such training and careers, I learned how to observe and think about the systemic connections behind things. I discovered how research shares striking parallels with art, craft, and sport. 
-In each domain, our attention is often pulled toward the most obvious target: the ball in tennis, 
-the sound in trumpet playing, and the paper in research. The direct output, however, is rarely the true source of excellence. 
-The most intuitive path toward that target may yield quick results, but it often turns out to be the wrong one.</p>
+<p>Through such training and careers, I learned how to observe and think about the underlying systems behind phenomena. I discovered how research shares striking parallels with art, craft, and sport. In each discipline, our attention is often pulled toward the most obvious target: the ball in tennis, the sound in trumpet playing, and the paper in research. The direct output, however, is rarely the true source of excellence. The most intuitive path toward that target may yield quick results, but it often turns out to be the wrong one.</p>
 
 <p>What truly matters is the inner sense of flow:  the flow of body movement and coordination in sport, 
 the flow of phrasing and breath in music, and the flow of curiosity and ideas in research. 
-Achieving the right balance often requires easing off rather than applying more force. Too much direct effort leads to a false equilibrium! By respecting the natural logic of things and letting elegance and flow guide our efforts, with careful practice of foundational techniques, the results emerge naturally —
+Achieving the right balance often requires easing off rather than applying more force. Too much direct effort leads to a false equilibrium! By respecting the natural logic inherent in each discipline and letting elegance and flow guide our efforts, with careful practice of foundational techniques, the results emerge naturally —
 水到渠成 (“when the water arrives, the channel is formed”).</p>
 
 <p>In all these pursuits, achieving elegance is an “optimization problem:” Looking away from the direct output, 
@@ -310,7 +307,7 @@ balance and efficiency are achieved should force be deliberately added, transfor
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-11-08
+  Site last updated 2025-11-08.
 </div>
 
       </footer>
