--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <section class="page__content" itemprop="text">
         <p>I am an Associate Professor at the <a href="https://www.comp.nus.edu.sg/">School of Computing</a>, <a href="https://www.nus.edu.sg">National University of Singapore</a>. My interests include research in systems and system security, the social and economics aspects of cyber security, and education.</p>
 
-<p>I’m advising the <a href="https://curiosity.comp.nus.edu.sg">Curiosity Reserach Group</a> with the following ultimate missions:</p>
+<p>I’m leading the <a href="https://curiosity.comp.nus.edu.sg">Curiosity Reserach Group</a> with the following ultimate missions:</p>
 <ul>
   <li>Understand systems (理解系统),</li>
   <li>Abstract knowledge (提炼知识),</li>
@@ -339,7 +339,7 @@
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-11-05
+  Site last updated 2025-11-09
 </div>
 
       </footer>
