--- a/research/index.html
+++ b/research/index.html
@@ -278,7 +278,7 @@
   <li>Mobile malware analysis</li>
 </ul>
 
-<h3 id="ai-security-from-system-principles">AI security from system principles</h3>
+<h3 id="ai-and-security-from-system-perspective">AI and security from system perspective</h3>
 <p><a href="https://www.comp.nus.edu.sg/~liangzk/publications/aisys.html">[Related Publications]</a></p>
 <ul>
   <li>Application of AI and recommendation system in software and system security</li>
@@ -325,7 +325,7 @@
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-11-05
+  Site last updated 2025-11-09
 </div>
 
       </footer>
